<resources>
    <string name="app_name">Nom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_calendar">Calendar</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_searchfood">Search Food</string>
    <string name="menu_diary">Diary</string>
    <string name="menu_diary_entry">Diary Entry</string>

    <string name="settings_clear_suggestions">Clear search suggestions</string>
    <string name="settings_clear_suggestions_confirm">Are you sure you want to delete all saved search suggestions?</string>
    <string name="settings_clear_suggestions_description">Permanently delete all previous search queries</string>

    <string name="button_calendar">Open Calendar</string>
    <string name="home_date_example">Thursday, January 1, 1970</string>

    <string name="home_foods_tracked">0 foods tracked</string>
    <string name="home_foods_tracked_single">%1$d food tracked</string>
    <string name="home_foods_tracked_plural">%1$d foods tracked</string>

    <string name="home_nutrient_summary">Nutrition summary</string>
    <string name="home_mass_consumed">Mass consumed</string>
    <string name="home_mass_consumed_placeholder">0 g</string>
    <string name="zero_placeholder">0</string>

    <string name="foodsearchresult_macros">Calories: %1$.0f / Fat: %2$,.1f / Carbs: %3$,.1f / Protein: %4$,.1f</string>

    <string name="diary_servings">%1$,.1f * %2$s (%3$,.1f %4$s)</string>
    <string name="diary_servings_single">%1$s (%2$,.1f %3$s)</string>
    <string name="diary_calories">%1$.0f</string>

    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="serving_size">Serving size</string>
    <string name="amount_consumed">Amount</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="diary_entry_multiply_sign">*</string>
    <string name="diary_entry_error">Error: %1$s</string>

    <string name="home_nutrient_bold">&lt;b>%1$s&lt;/b>  %2$.0f %3$s</string>
    <string name="home_nutrient_italic">&lt;i>%1$s&lt;/i>  %2$.0f %3$s</string>
    <string name="home_nutrient">%1$s  %2$.0f %3$s</string>

    <string name="daily_value">% Daily Value</string>
    <!-- Double percent sign %% escapes into a single percent -->
    <string name="nutrient_daily_value_format">%1$.0f%%</string>

    <string name="unit_grams">Grams</string>
    <string name="unit_micrograms">Micrograms</string>
    <string name="unit_milligrams">Milligrams</string>
    <string name="unit_kilograms">Kilograms</string>
    <string name="unit_ounces">Ounces</string>
    <string name="unit_pounds">Pounds</string>

    <string name="unit_grams_abv">g</string>
    <string name="unit_micrograms_abv">μg</string>
    <string name="unit_milligrams_abv">mg</string>
    <string name="unit_kilograms_abv">kg</string>
    <string name="unit_ounces_abv">oz</string>
    <string name="unit_pounds_abv">lbs</string>

    <string name="unit_liters">Liters</string>
    <string name="unit_milliliters">Milliliters</string>
    <string name="unit_microliters">Microliters</string>
    <string name="unit_teaspoons">Teaspoons</string>
    <string name="unit_tablespoons">Tablespoons</string>
    <string name="unit_shots">Shots</string>
    <string name="unit_fluid_ounces">Fluid Ounces</string>
    <string name="unit_cups">Cups</string>
    <string name="unit_pints">Pints</string>
    <string name="unit_quarts">Quarts</string>
    <string name="unit_gallons">Gallons</string>

    <string name="unit_liters_abv">L</string>
    <string name="unit_milliliters_abv">mL</string>
    <string name="unit_microliters_abv">μL</string>
    <string name="unit_teaspoons_abv">tsp</string>
    <string name="unit_tablespoons_abv">tbsp</string>
    <string name="unit_shots_abv">jig</string>
    <string name="unit_fluid_ounces_abv">fl oz</string>
    <string name="unit_cups_abv">c</string>
    <string name="unit_pints_abv">pt</string>
    <string name="unit_quarts_abv">qt</string>
    <string name="unit_gallons_abv">gal</string>

    <string name="nutrient_calorie">Calories</string>
    <string name="nutrient_fat">Fat</string>
    <string name="nutrient_fat_saturated">Saturated fat</string>
    <string name="nutrient_fat_trans">Trans fat</string>
    <string name="nutrient_carbohydrates">Carbohydrates</string>
    <string name="nutrient_fiber">Fiber</string>
    <string name="nutrient_sugar">Sugar</string>
    <string name="nutrient_sugar_added">Added sugar</string>
    <string name="nutrient_sugar_alcohol">Sugar alcohol</string>
    <string name="nutrient_ethyl_alcohol">Ethyl alcohol</string>
    <string name="nutrient_protein">Protein</string>
    <string name="nutrient_calcium">Calcium</string>
    <string name="nutrient_cholesterol">Cholesterol</string>
    <string name="nutrient_sodium">Sodium</string>
    <string name="nutrient_iron">Iron</string>
    <string name="nutrient_magnesium">Magnesium</string>
    <string name="nutrient_phosphorus">Phosphorus</string>
    <string name="nutrient_potassium">Potassium</string>
    <string name="nutrient_zinc">Zinc</string>
    <string name="nutrient_copper">Copper</string>
    <string name="nutrient_thiamin">Thiamin</string>
    <string name="nutrient_riboflavin">Riboflavin</string>
    <string name="nutrient_niacin">Niacin</string>
    <string name="nutrient_choline">Choline</string>
    <string name="nutrient_theobromine">Theobromine</string>
    <string name="nutrient_selenium">Selenium</string>
    <string name="nutrient_retinol">Retinol (Vitamin A1)</string>
    <string name="nutrient_carotene_alpha">Carotene, alpha</string>
    <string name="nutrient_carotene_beta">Carotene, beta</string>
    <string name="nutrient_folic_acid">Folic Acid</string>
    <string name="nutrient_folate">Folate</string>
    <string name="nutrient_caffeine">Caffeine</string>
    <string name="nutrient_manganese">Manganese</string>
    <string name="nutrient_biotin">Biotin</string>
    <string name="nutrient_chloride">Chloride</string>
    <string name="nutrient_chromium">Chromium</string>
    <string name="nutrient_molybdenum">Molybdenum</string>
    <string name="nutrient_pantothenic_acid">Pantothenic Acid</string>
    <string name="nutrient_iodine">Iodine</string>
    <string name="nutrient_vitamin_a">Vitamin A</string>
    <string name="nutrient_vitamin_b6">Vitamin B6</string>
    <string name="nutrient_vitamin_b12">Vitamin B12</string>
    <string name="nutrient_vitamin_c">Vitamin C</string>
    <string name="nutrient_vitamin_d">Vitamin D</string>
    <string name="nutrient_vitamin_e">Vitamin E</string>
    <string name="nutrient_vitamin_k">Vitamin K</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>