<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_20"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_searchfood"
            android:icon="?android:attr/actionModeWebSearchDrawable"
            android:title="@string/menu_searchfood" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/baseline_restaurant_menu_24"
            android:title="@string/menu_diary" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />
    </group>
</menu>