<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.utsa.cs3443.anw198.foodtracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_searchfood"
        android:name="edu.utsa.cs3443.anw198.foodtracker.ui.searchfood.SearchFoodFragment"
        android:label="@string/menu_searchfood"
        tools:layout="@layout/fragment_searchfood" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="edu.utsa.cs3443.anw198.foodtracker.ui.settings.NomSettingsFragment"
        android:label="@string/action_settings" />

    <fragment
        android:id="@+id/nav_diary_entry"
        android:name="edu.utsa.cs3443.anw198.foodtracker.ui.diaryentry.DiaryEntryFragment"
        android:label="@string/menu_diary_entry"
        tools:layout="@layout/fragment_diary_entry" />

    <fragment
        android:id="@+id/nav_diary"
        android:name="edu.utsa.cs3443.anw198.foodtracker.ui.diary.DiaryFragment"
        android:label="@string/menu_diary"
        tools:layout="@layout/fragment_diary" />
</navigation>