<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls">

    <TextView
        android:id="@+id/diaryEntryTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fda_nutrition_facts_title_size"
        android:layout_marginLeft="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginTop="@dimen/fda_nutrition_facts_top_bottom_margin"
        android:layout_marginRight="@dimen/fda_nutrition_facts_margin_sides"
        android:text="@string/nutrition_facts"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:autoSizeTextType="uniform" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/fda_nutrition_facts_divider_small_size"
        android:layout_marginLeft="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginTop="@dimen/fda_nutrition_facts_top_bottom_margin"
        android:layout_marginRight="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginBottom="@dimen/fda_nutrition_facts_top_bottom_margin"
        android:background="@color/fda_nutrition_facts_divider_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/diary_entry_amount_consumed_height"
        android:layout_marginLeft="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginRight="@dimen/fda_nutrition_facts_margin_sides"
        android:orientation="horizontal"
        android:weightSum="20">

        <EditText
            android:id="@+id/editTextQuantity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:autofillHints="amountConsumed"
            android:hint="@string/amount_consumed"
            android:inputType="none|numberDecimal" />

        <TextView
            style="@style/prominentText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/diary_entry_multiply_sign"
            android:textSize="@dimen/diary_entry_asterisk_size" />

        <Spinner
            android:id="@+id/spinnerServingSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:contentDescription="@string/serving_size" />

        <TextView
            android:id="@+id/textViewGrams"
            style="@style/prominentText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical|end"
            android:text="@string/home_mass_consumed_placeholder"
            android:textSize="@dimen/fda_nutrition_facts_serving_size_size"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/fda_nutrition_facts_divider_extra_large_size"
        android:layout_marginLeft="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginTop="@dimen/fda_nutrition_facts_top_bottom_margin"
        android:layout_marginRight="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginBottom="@dimen/fda_nutrition_facts_top_bottom_margin"
        android:background="?attr/colorOnSurface" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginRight="@dimen/fda_nutrition_facts_margin_sides"
        android:orientation="horizontal"
        android:weightSum="20">

        <Button
            android:id="@+id/buttonSaveToDiary"
            android:layout_width="0dp"
            android:layout_height="@dimen/diary_entry_amount_consumed_height"
            android:layout_weight="5"
            android:text="@string/save" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="12" />

        <Button
            android:id="@+id/buttonDeleteEntry"
            android:layout_width="0dp"
            android:layout_height="@dimen/diary_entry_amount_consumed_height"
            android:layout_weight="3"
            android:contentDescription="@string/delete"
            android:visibility="visible"
            app:icon="@drawable/delete"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="@dimen/diary_entry_trash_button_icon_size" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fda_nutrition_facts_divider_small_size"
        android:layout_marginLeft="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginTop="@dimen/fda_nutrition_facts_top_bottom_margin"
        android:layout_marginRight="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginBottom="@dimen/fda_nutrition_facts_top_bottom_margin"
        android:background="@color/fda_nutrition_facts_divider_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginRight="@dimen/fda_nutrition_facts_margin_sides"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:fontFamily="sans-serif-black"
            android:text="@string/nutrient_calorie"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/fda_nutrition_facts_calories_size" />

        <TextView
            android:id="@+id/diaryEntryCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="end"
            android:text="@string/zero_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/fda_nutrition_facts_calories_amount_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/fda_nutrition_facts_divider_medium_size"
        android:layout_marginLeft="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginRight="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginBottom="@dimen/fda_nutrition_facts_top_bottom_margin"
        android:background="?attr/colorOnSurface" />

    <TextView
        style="@style/prominentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fda_nutrition_facts_margin_sides"
        android:layout_marginRight="@dimen/fda_nutrition_facts_margin_sides"
        android:fontFamily="sans-serif-black"
        android:gravity="end"
        android:text="@string/daily_value"
        android:textSize="@dimen/fda_nutrition_facts_daily_value_size" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/diaryEntryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager" />

</LinearLayout>
